Obtención de vehiculo-conductor (backend)
