# ruta_ya/src/main/java/com/ruta_ya/dto/response/VehiculoConductorResponse.java
@@ -1,0 +1,7 @@
+package com.ruta_ya.dto.response;
+
+public interface VehiculoConductorResponse {
+    String getCedulaConductor();
+    String getPlacaVehiculo();
+    Boolean getDisponible();
+}
